--- a/xhprof_lib/templates/chart.phtml
+++ b/xhprof_lib/templates/chart.phtml
@@ -1,62 +1,61 @@
 <script type="text/javascript">
-        var chart;
-        $(document).ready(function() {
-            chart = new Highcharts.Chart({
-                chart: {
-                    renderTo: 'container',
-                    margin: [80, 200, 60, 100],
-                    borderWidth: '0px',
-                    zoomType: 'xy',
-                    events:
-                     {
-                        click: function(e)
-                        {
+    var chart;
+    $(document).ready(function () {
+        chart = new Highcharts.Chart({
+            chart: {
+                renderTo: 'container',
+                margin: [80, 200, 60, 100],
+                borderWidth: '0px',
+                zoomType: 'xy',
+                events:
+                    {
+                        click: function (e) {
                             // find the clicked values and the series
                             var x = e.xAxis[0].value,
                                 y = e.yAxis[0].value,
                                 series = this.series[0];
                         }
                     }
-                },
-                credits: {
-                	enabled:false
-                },
-                title: {
-                    text: 'Data for XH Gui',
-                    style: {
-                        margin: '10px 0 0 0' // center it
-                    }
-                },
-                subtitle: {
-                    text: 'Source: XH Gui',
-                    style: {
-                        margin: '10px 0 0 0' // center it
-                    }
-                },
-                xAxis: [{
-                    categories: [<?php echo $dateidsJS;?>],
-                    labels: {
-                        formatter: function() {
-                            var date = (this.value).split(" ");
-                            return date[0];
-                        },
-                        rotation: -45,
-                        align: 'right',
-                    }
+            },
+            credits: {
+                enabled: false
+            },
+            title: {
+                text: 'Data for XH Gui',
+                style: {
+                    margin: '10px 0 0 0' // center it
+                }
+            },
+            subtitle: {
+                text: 'Source: XH Gui',
+                style: {
+                    margin: '10px 0 0 0' // center it
+                }
+            },
+            xAxis: [{
+                categories: [<?php echo $dateidsJS;?>],
+                labels: {
+                    formatter: function () {
+                        var date = (this.value).split(" ");
+                        return date[0];
+                    },
+                    rotation: -45,
+                    align: 'right',
+                }
 
-                }],
+            }],
 
-                yAxis: [
+            yAxis: [
                 { // Primary yAxis
                     labels:
-                    {
-                        formatter: function() {
-                            return this.value;
+                        {
+                            formatter: function () {
+                                return this.value;
+                            },
+                            style: {
+                                color: '#547E8F'
+                            }
                         },
-                        style: {
-                            color: '#547E8F'
-                        }
-                    },
                     title: {
                         text: 'Peak Memory Usage',
                         style: {
@@ -75,7 +74,7 @@
                         }
                     },
                     labels: {
-                        formatter: function() {
+                        formatter: function () {
                             return this.value;
                         },
                         style: {
@@ -92,7 +91,7 @@
                         }
                     },
                     labels: {
-                        formatter: function() {
+                        formatter: function () {
                             return this.value;
                         },
                         style: {
@@ -102,64 +101,63 @@
                     opposite: true,
                     offset: 100
                 }],
-                tooltip: {
-                    formatter: function() {
-                        var unit = {
-                            '': '',
-                            '': '',
-                            '': ''
-                        }[this.series.name];
+            tooltip: {
+                formatter: function () {
+                    var unit = {
+                        '': '',
+                        '': '',
+                        '': ''
+                    }[this.series.name];
 
-                        return '<b>'+ this.series.name +'</b><br/><br/>' + this.y +'';
-                    }
+                    return '<b>' + this.series.name + '</b><br/><br/>' + this.y + '';
+                }
+            },
+            legend: {
+                layout: 'vertical',
+                style: {
+                    left: '120px',
+                    bottom: 'auto',
+                    right: 'auto',
+                    top: '90px'
                 },
-                legend: {
-                    layout: 'vertical',
-                    style: {
-                        left: '120px',
-                        bottom: 'auto',
-                        right: 'auto',
-                        top: '90px'
-                    },
-                    backgroundColor: '#FFFFFF'
-                },
-                plotOptions: {
-                      series: {
-                        lineWidth: 1,
-                          point: {
-                            events: {
-                                'click': function() {
+                backgroundColor: '#FFFFFF'
+            },
+            plotOptions: {
+                series: {
+                    lineWidth: 1,
+                    point: {
+                        events: {
+                            'click': function () {
 
-                                      if (this.series.data.length > 1)
-                                      {
-                                        var runid = (this.category).split(" ");
-                                        document.location = '?run=' + runid[2];
-                                      }
+                                if (this.series.data.length > 1) {
+                                    var runid = (this.category).split(" ");
+                                    document.location = '?run=' + runid[2];
                                 }
                             }
                         }
                     }
-                },
-                series: [{
-                    name: 'CPU',
-                    color: '#69B0CC',
-                    type: 'line',
-                    yAxis: 1,
-                    data: [<?php echo $cpuJS;?>],
+                }
+            },
+            series: [{
+                name: 'CPU',
+                color: '#69B0CC',
+                type: 'line',
+                yAxis: 1,
+                data: [<?php echo $cpuJS;?>],
 
-                },{
-                    name: 'Wall Time',
-                    type: 'line',
-                    color: '#F47EAB',
-                    yAxis: 2,
-                    data: [<?php echo $wtJS;?>]
+            }, {
+                name: 'Wall Time',
+                type: 'line',
+                color: '#F47EAB',
+                yAxis: 2,
+                data: [<?php echo $wtJS;?>]
 
-                },{
-                    name: 'Peak Memory Usage',
-                    color: '#547E8F',
-                    type: 'line',
-                    data: [<?php echo $pmuJS;?>,]
-                }]
-              });
+            }, {
+                name: 'Peak Memory Usage',
+                color: '#547E8F',
+                type: 'line',
+                data: [<?php echo $pmuJS;?>,]
+            }]
         });
+    });
 </script>
