--- a/xhprof_html/css/xhprof.css
+++ b/xhprof_html/css/xhprof.css
@@ -90,35 +90,35 @@ ul.xhprof_actions li a:hover {
 /*   Styling for New Pages   */
 
 body {
-  font-family: 'Lato', sans-serif;
-  color: #5A5A5A;
-  background: #3d4b60; /* Old browsers */
-  background: -moz-linear-gradient(top,  #3d4b60 0%, #5e598c 100%, #4096ee 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(top,  #3d4b60 0%,#5e598c 100%,#4096ee 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom,  #3d4b60 0%,#5e598c 100%,#4096ee 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3d4b60', endColorstr='#4096ee',GradientType=0 ); /* IE6-9 */
+    font-family: 'Lato', sans-serif;
+    color: #5A5A5A;
+    background: #3d4b60; /* Old browsers */
+    background: -moz-linear-gradient(top, #3d4b60 0%, #5e598c 100%, #4096ee 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #3d4b60 0%, #5e598c 100%, #4096ee 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #3d4b60 0%, #5e598c 100%, #4096ee 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#3d4b60', endColorstr='#4096ee', GradientType=0); /* IE6-9 */
 }
 
 a {
-  color: #69B0CC;
-  text-decoration: none;
+    color: #69B0CC;
+    text-decoration: none;
 }
 
-a:hover{
-  text-decoration: underline;
+a:hover {
+    text-decoration: underline;
 }
 
-a:visited{
-  color: #547E8F;
+a:visited {
+    color: #547E8F;
 }
 
-.container{
-  max-width: 1400px;
-  padding: 20px;
-  background:#fff;
-  border-radius: 4px;
-  margin: 20px auto;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+.container {
+    max-width: 1400px;
+    padding: 20px;
+    background: #fff;
+    border-radius: 4px;
+    margin: 20px auto;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 .dash-header {
@@ -127,11 +127,11 @@ a:visited{
     margin-right: auto;
     margin-left: auto;
     border-bottom: 1px solid #ECECEC;
-    padding-bottom:30px;
+    padding-bottom: 30px;
 }
 
-.xh-title-wrap{
-  display: inline-block;
+.xh-title-wrap {
+    display: inline-block;
 }
 
 .xh-title {
@@ -141,9 +141,9 @@ a:visited{
     font-weight: 300;
 }
 
-.xh-title:hover{
-  text-decoration: none;
-  color: #7cced6;
+.xh-title:hover {
+    text-decoration: none;
+    color: #7cced6;
 }
 
 .xh-title:after {
@@ -151,12 +151,12 @@ a:visited{
     display: block;
     width: 115px;
     height: 5px;
-    margin-top:2px;
+    margin-top: 2px;
     background: #7cced6; /* Old browsers */
-    background: -moz-linear-gradient(left,  #7cced6 0%, #f47eab 100%, #4096ee 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(left,  #7cced6 0%,#f47eab 100%,#4096ee 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to right,  #7cced6 0%,#f47eab 100%,#4096ee 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7cced6', endColorstr='#4096ee',GradientType=1 ); /* IE6-9 */
+    background: -moz-linear-gradient(left, #7cced6 0%, #f47eab 100%, #4096ee 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(left, #7cced6 0%, #f47eab 100%, #4096ee 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right, #7cced6 0%, #f47eab 100%, #4096ee 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7cced6', endColorstr='#4096ee', GradientType=1); /* IE6-9 */
 }
 
 .search {
@@ -169,23 +169,23 @@ a:visited{
 }
 
 .link-options {
-  margin-top:20px;
-  padding: 10px 0;
-  font-size: 14px;
-  text-align: center;
+    margin-top: 20px;
+    padding: 10px 0;
+    font-size: 14px;
+    text-align: center;
 }
 
-.options-list li{
-  list-style: none;
-  display: inline;
-  padding: 5px 10px;
+.options-list li {
+    list-style: none;
+    display: inline;
+    padding: 5px 10px;
 }
 
 .link-options a {
     margin: 0 0.2em;
 }
 
-.form-text{
+.form-text {
     padding: 9px 15px;
     vertical-align: middle;
     border-radius: 4px;
@@ -199,7 +199,7 @@ a:visited{
     padding: 2px 15px 3px 15px;
     background-color: #6dbcc4;
     border-radius: 4px;
-    height:35px;
+    height: 35px;
     text-transform: uppercase;
 }
 
@@ -208,8 +208,8 @@ a:visited{
     cursor: pointer;
 }
 
-.form-select{
-    height:35px;
+.form-select {
+    height: 35px;
     border: 1px solid #CED2D4;
 }
 
@@ -225,7 +225,7 @@ a:visited{
 #box-table-a {
     width: 100%;
     font-size: 14px;
-    border:1px solid #ececec;
+    border: 1px solid #ececec;
     margin: 20px auto 45px auto;
     text-align: left;
     border-collapse: collapse;
@@ -275,7 +275,7 @@ a:visited{
     margin-right: auto;
     margin-left: auto;
     height: auto;
-    margin-left:10px;
+    margin-left: 10px;
 }
 
 .runid {
@@ -350,7 +350,7 @@ a.callgraph:link {
     text-align: left;
     border-collapse: collapse;
     float: left;
-    border:1px solid #ececec;
+    border: 1px solid #ececec;
 }
 
 #box-table-b th {
@@ -406,9 +406,9 @@ a.callgraph:link {
     border: 1px solid #ececec;
 }
 
-.box-table-title{
-  background: #f6f6f6;
-  text-align: center;
+.box-table-title {
+    background: #f6f6f6;
+    text-align: center;
 }
 
 .box-tables th {
@@ -448,25 +448,25 @@ a.callgraph:link {
 }
 
 .overall {
-    //font-family: "Lucida Grande", Sans-Serif;
+/ / font-family: "Lucida Grande", Sans-Serif;
     font-size: 1.188em;
     color: #333333;
 }
 
 a.invert:link {
-    //font-family: "Lucida Grande", Sans-serif;
+/ / font-family: "Lucida Grande", Sans-serif;
     font-size: 0.875em;
     color: #0066ff;
 }
 
 a.invert:hover {
-    //font-family: "Lucida Grande", Sans-serif;
+/ / font-family: "Lucida Grande", Sans-serif;
     font-size: 0.875em;
     color: #0066ff;
 }
 
 a.invert:visited {
-    //font-family: "Lucida Grande", Sans-serif;
+/ / font-family: "Lucida Grande", Sans-serif;
     font-size: 0.875em;
     color: #0066ff;
 }
